--- a/app/src/main/res/layout/fragment_music_video.xml
+++ b/app/src/main/res/layout/fragment_music_video.xml
@@ -8,14 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.fragment.MusicVideoFragment">
-
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/playerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/blackColor"
-            app:use_controller="false" />
-
+            app:use_controller="false"
+            app:resize_mode="zoom"
+            android:background="@color/blackColor"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -171,6 +170,5 @@
                 android:src="@drawable/ic_play_button" />
 
         </RelativeLayout>
-
     </RelativeLayout>
 </layout>
